@@ -216,6 +216,11 @@
       \item \command{R CMD check} now optionally checks makefiles for
       correct and portable use of the \samp{SHLIB_OPENMP_*FLAGS} macros.
 
+      \item \command{R CMD check} now evaluates \code{\\Sexpr{}}
+      expressions (including those in macros) before checking the
+      contents of \file{Rd} files and so detects issues both in
+      evaluating the expressions and in the expanded contents.
+
       \item \command{R CMD check} now lists missing packages comma
       separatedly and with regular quotes such as to be useful as
       argument in calling \code{install.packages(c(..))}; from a suggestion by
